--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1", features = ["rt", "sync", "signal", "time"] }
+futures = "0.3"
+regex = "1.4"
+chrono = "0.4"
+
+[dependencies.serenity]
+default-features = false
+features = ["client", "model", "http", "rustls_backend", "gateway"]
+git = "https://github.com/serenity-rs/serenity"
+branch = "current"
